@@ -1,3 +1,8 @@
+2015-04-10  Alan Modra  <amodra@gmail.com>
+
+	PR ld/18223
+	* ldlang.c (lang_process): Add _init and _fini to gc_sym_list.
+
 2015-04-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* emulparams/elf_x86_64.sh (BNDPLT): Removed.
